--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-config.py
 /config.py
+/config.ini
 facebook_user_details.py
 generate_passwords.py
 git_searcher.py
@@ -84,3 +84,6 @@ target/
 
 profile_pic/
 reports/json/
+
+.DS_Store
+remove/
